--- a/src/components/lists/ListComment/style.scss
+++ b/src/components/lists/ListComment/style.scss
@@ -25,13 +25,15 @@
 .box-image {
   width: 40px;
   overflow: hidden;
-  display: inline-block;
+  display: flex;
   border-radius: 60px;
   margin-right: 13px;
+  align-self: flex-start;
 }
 
 .img-user {
   width: 35px;
+  height: 35px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -53,6 +55,7 @@
 .content--right {
   display: flex;
   align-items: center;
+  align-self: flex-end;
 }
 
 .panel--menu {
